ann formatting to include date

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,13 +48,12 @@
 
     <TextView
         android:id="@+id/firstAnView"
-        android:layout_width="378dp"
-        android:layout_height="53dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="55dp"
+        android:layout_width="377dp"
+        android:layout_height="79dp"
+        android:layout_marginBottom="6dp"
         android:text="loading..."
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
+        app:layout_constraintBottom_toTopOf="@+id/annViewButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -64,8 +63,7 @@
         android:id="@+id/annViewButton"
         android:layout_width="224dp"
         android:layout_height="38dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginTop="6dp"
         android:text="See More News"
         app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
         app:layout_constraintEnd_toEndOf="parent"
