--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,6 +33,19 @@
         android:name="com.google.android.gms.maps.SupportMapFragment" />
 
 
+    <Button
+        android:id="@+id/refresh"
+        android:layout_width="100dp"
+        android:layout_height="53dp"
+        android:layout_marginTop="134dp"
+        android:layout_marginEnd="100dp"
+        android:layout_marginBottom="480dp"
+        android:onClick="refresh"
+        android:text="Refresh Timer"
+        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
+        app:layout_constraintEnd_toEndOf="@+id/clockDisplay"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
     <ImageButton
         android:id="@+id/parkButton"
@@ -90,10 +103,11 @@
 
     <Button
         android:id="@+id/adjustTime"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="100dp"
+        android:layout_height="53dp"
         android:layout_marginTop="134dp"
         android:layout_marginBottom="480dp"
+        android:onClick="adjustTime"
         android:text="Adjust time"
         app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
         app:layout_constraintEnd_toEndOf="@+id/clockDisplay"
