--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -22,7 +22,7 @@
         android:id="@+id/search_edit_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Enter Street Name"
+        android:hint="Enter address to find nearby streets"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
@@ -42,29 +42,17 @@
         app:layout_constraintStart_toStartOf="@id/search_edit_text"
         app:layout_constraintTop_toBottomOf="@id/search_edit_text" />
 
-    <TextView
-        android:id="@+id/nearby_streets_text_view"
+    <ListView
+        android:id="@+id/StreetsList"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Nearby Streets:"
-        android:textSize="18sp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="1dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginBottom="1dp"
+        app:layout_constraintTop_toBottomOf="@+id/search_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/search_button" />
-
-    <TextView
-        android:id="@+id/restriction_types_text_view"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Restriction Types:"
-        android:textSize="18sp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/nearby_streets_text_view" />
-
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
