--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -78,8 +78,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/notitime_toggle_button"
-            android:textOff="10 Mins"
-            android:textOn="10 Mins" />
+            android:textOff="15 Mins"
+            android:textOn="15 Mins" />
 
         <Space
             android:layout_width="2sp"
@@ -91,8 +91,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/notitime_toggle_button"
-            android:textOff="15 Mins"
-            android:textOn="15 Mins" />
+            android:textOff="30 Mins"
+            android:textOn="30 Mins" />
 
         <Space
             android:layout_width="2sp"
@@ -104,8 +104,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/notitime_toggle_button"
-            android:textOff="20 Mins"
-            android:textOn="20 Mins" />
+            android:textOff="1 hr"
+            android:textOn="1 hr" />
 
     </LinearLayout>
 
